add handler exception, update openapi with error responses
